--- a/MyFirstApp/app/build.gradle
+++ b/MyFirstApp/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
