--- a/MyFirstApp/app/src/main/AndroidManifest.xml
+++ b/MyFirstApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="com.myfirstapp.myfirstapp"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AnimalImageActivity">
+        <activity android:name=".WebViewActivity">
         </activity>
     </application>
 
